--- a/index.html
+++ b/index.html
@@ -8,11 +8,21 @@
   <body>
   <div id="header">
     <h1>B.A. Burritos</h1>
-    <button id="button1">About</button>
-    <button id="button2">Menu</button>
+    <a href="#content"><button id="button1">About</button></a>
+    <a href="#content2"><button id="button2">Menu</button></a>
   </div>
   <div id="content">
     <h1>About Us</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum feugiat aliquet. Proin consequat sagittis condimentum. Nunc id vulputate quam, id aliquam diam. Quisque posuere erat dolor, commodo ullamcorper quam vehicula ut. Nullam urna arcu, bibendum eget dignissim vel, tincidunt interdum nibh. Nunc condimentum, augue eu egestas imperdiet, ex lacus volutpat ante, accumsan consequat nisi nunc accumsan augue. Ut hendrerit sit amet mauris non convallis. Ut mattis ullamcorper tortor, nec porta nulla aliquam quis. Nam pharetra ligula purus, vitae mattis metus pharetra vitae. Donec laoreet dictum massa vitae pretium. Sed in elit vestibulum, tincidunt leo id, convallis ligula. Nulla quis mauris eu felis congue placerat eu vitae risus.Quisque ullamcorper sapien turpis, quis tempor dui lobortis ut. Phasellus eleifend, velit a hendrerit cursus, elit enim aliquam eros, et iaculis ligula mi nec velit. Ut justo massa, imperdiet vitae viverra sit amet, ultricies ac ante. Sed cursus lorem erat, vel elementum orci ullamcorper vel. Sed diam tellus, viverra a vestibulum quis, accumsan at massa. Morbi vitae bibendum nisi. Duis blandit eros rutrum sem elementum tincidunt. Donec nec erat ut velit facilisis aliquet eget sit amet ligula. In tempus nisi ac velit eleifend posuere. Sed eget justo in ligula euismod faucibus eu sit amet turpis. Donec quis pretium elit. Ut molestie mollis tempus. Curabitur bibendum magna purus, sit amet vulputate velit tempor nec. Maecenas tincidunt dolor et porta luctus. Fusce consequat nisl eu nulla sollicitudin molestie. Morbi quis hendrerit lectus.
+    </p>
+  </div>
+  <div id="break"></div>
+  <div id="content2">
+    <h1>Menu</h1>
+    <!-- This is where you put the P5 js stuff -->
+    
+    <!-- Dont put P5 past here -->
   </div>
   <script src="script.js"></script>
   </body>
