--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
   <div id="content2">
     <h1>Menu</h1>
     <!-- This is where you put the P5 js stuff -->
-    
+
     <!-- Dont put P5 past here -->
+  </div>
+  <div id="break2"></div>
+  <div id="content2">
+    <h1>Find Us</h1>
+    <br>
+    <br>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3076.1608627661217!2d-104.99849708823731!3d39.55598025938672!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876c82381d7b26a9%3A0x9a0d2a2d6c70cf46!2sSTEM+School+Highlands+Ranch!5e0!3m2!1sen!2sus!4v1511972355470" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
   <script src="script.js"></script>
   </body>
